@@ -1,9 +1,11 @@
 package jmri;
 
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import jmri.implementation.SignalSpeedMap;
 import jmri.util.PhysicalLocation;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -112,11 +114,6 @@ import org.slf4j.LoggerFactory;
  */
 public class Block extends jmri.implementation.AbstractNamedBean implements PhysicalLocationReporter {
 
-    /**
-     *
-     */
-    private static final long serialVersionUID = -298646610517375288L;
-
     public Block(String systemName) {
         super(systemName.toUpperCase());
     }
@@ -143,12 +140,12 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
             setNamedSensor(null);
             return false;
         }
-        if (InstanceManager.sensorManagerInstance() != null) {
-            Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
-            if (sensor != null) {
+        if (InstanceManager.getNullableDefault(jmri.SensorManager.class) != null) {
+            try {
+                Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
                 setNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
                 return true;
-            } else {
+            } catch (IllegalArgumentException ex) {
                 setNamedSensor(null);
                 log.error("Sensor '" + pName + "' not available");
             }
@@ -232,7 +229,8 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
      * {@link Reporter#getLastReport() last report}.
      *
      * @see Reporter
-     * @param reportingCurrent
+     * @param reportingCurrent true if to use current report; false if to use
+     *                         last report
      */
     public void setReportingCurrent(boolean reportingCurrent) {
         _reportingCurrent = reportingCurrent;
@@ -277,6 +275,15 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         }
     }
 
+    public boolean hasPath(Path p) {
+        for (Path t : paths) {
+            if (t.equals(p)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     /**
      * Get a copy of the list of Paths
      */
@@ -303,9 +310,13 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
      * @param value The new Object resident in this block, or null if none.
      */
     public void setValue(Object value) {
-        Object old = _value;
-        _value = value;
-        firePropertyChange("value", old, _value);
+        //ignore if unchanged
+        if (value != _value) {
+            log.debug("Block {} value changed from '{}' to '{}'", getSystemName(), _value, value);
+            Object old = _value;
+            _value = value;
+            firePropertyChange("value", old, _value);
+        }
     }
 
     public Object getValue() {
@@ -313,10 +324,14 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
     }
 
     public void setDirection(int direction) {
-        int oldDirection = _direction;
-        _direction = direction;
-        // this is a bound parameter
-        firePropertyChange("direction", Integer.valueOf(oldDirection), Integer.valueOf(direction));
+        //ignore if unchanged
+        if (direction != _direction) {
+            log.debug("Block {} direction changed from {} to {}", getSystemName(), Path.decodeDirection(_direction), Path.decodeDirection(direction));
+            int oldDirection = _direction;
+            _direction = direction;
+            // this is a bound parameter
+            firePropertyChange("direction", Integer.valueOf(oldDirection), Integer.valueOf(direction));
+        }
     }
 
     public int getDirection() {
@@ -335,7 +350,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
      * block is barred, so traffic flow is bi-directional.
      */
     public void addBlockDenyList(String pName) {
-        Block blk = jmri.InstanceManager.blockManagerInstance().getBlock(pName);
+        Block blk = jmri.InstanceManager.getDefault(jmri.BlockManager.class).getBlock(pName);
         NamedBeanHandle<Block> namedBlock = jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, blk);
         if (!blockDenyList.contains(namedBlock)) {
             blockDenyList.add(namedBlock);
@@ -414,16 +429,16 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         }
         String speed = _blockSpeed;
         if (_blockSpeed.equals("Global")) {
-            speed = InstanceManager.blockManagerInstance().getDefaultSpeed();
+            speed = InstanceManager.getDefault(jmri.BlockManager.class).getDefaultSpeed();
         }
 
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
         try {
-            return jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
+            return jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
         } catch (Exception ex) {
             return -1;
         }
@@ -433,16 +448,17 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
 
     public String getBlockSpeed() {
         if (_blockSpeed.equals("Global")) {
-            return ("Use Global " + InstanceManager.blockManagerInstance().getDefaultSpeed());
+            return (Bundle.getMessage("UseGlobal", "Global") + " " + InstanceManager.getDefault(jmri.BlockManager.class).getDefaultSpeed());
+            // Ensure the word "Global" is always in the speed name for later comparison
         }
         return _blockSpeed;
     }
-    
+
     public void setBlockSpeedName(String s) {
-        if(s==null) {
+        if (s == null) {
             _blockSpeed = "";
         } else {
-            _blockSpeed = s;            
+            _blockSpeed = s;
         }
     }
 
@@ -457,7 +473,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
                 Float.parseFloat(s);
             } catch (NumberFormatException nx) {
                 try {
-                    jmri.implementation.SignalSpeedMap.getMap().getSpeed(s);
+                    jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(s);
                 } catch (Exception ex) {
                     throw new JmriException("Value of requested block speed is not valid");
                 }
@@ -476,9 +492,24 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         return _curvature;
     }
 
+    /*
+     * Set length.  length must be in millimeters.
+     * Paths will inherit this length, if their length is not
+     * specifically set.  This length is the maximum length of
+     * any Path in the block. Path lengths will be modified to
+     * not exceed this length.
+     */
     public void setLength(float l) {
         _length = l;
-    }  // l must be in millimeters
+        List<Path> paths = getPaths();
+        Iterator<Path> it = paths.iterator();
+        while (it.hasNext()) {
+            Path p = it.next();
+            if (p.getLength() > l) {
+                p.setLength(0);   // set to default
+            }
+        }
+    }
 
     public float getLengthMm() {
         return _length;
@@ -491,6 +522,39 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
     public float getLengthIn() {
         return (_length / 25.4f);
     }  // return length in inches
+
+    /**
+     * Note: this has to make choices about identity values (always the same)
+     * and operation values (can change as the block works). Might be missing
+     * some identity values.
+     */
+    @Override
+    public boolean equals(Object obj) {
+        if (obj == this) {
+            return true;
+        }
+        if (obj == null) {
+            return false;
+        }
+
+        if (!(getClass() == obj.getClass())) {
+            return false;
+        } else {
+            Block b = (Block) obj;
+
+            if (!b.getSystemName().equals(this.getSystemName())) {
+                return false;
+            }
+
+        }
+        return true;
+    }
+
+    @Override
+    // This can't change, so can't include mutable values
+    public int hashCode() {
+        return this.getSystemName().hashCode();
+    }
 
     // internal data members
     private int _current = UNDETECTED; // state until sensor is set
@@ -507,27 +571,28 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
 
     private Path pListOfPossibleEntrancePaths[] = null;
     private int CntOfPossibleEntrancePaths = 0;
+
     void ResetCandidateEntrancePaths() {
         pListOfPossibleEntrancePaths = null;
         CntOfPossibleEntrancePaths = 0;
     }
+
     boolean SetAsEntryBlockIfPossible(Block b) {
-        for (int i=0; i< CntOfPossibleEntrancePaths; i++) {
-		 Block CandidateBlock = pListOfPossibleEntrancePaths[i].getBlock();
+        for (int i = 0; i < CntOfPossibleEntrancePaths; i++) {
+            Block CandidateBlock = pListOfPossibleEntrancePaths[i].getBlock();
             if (CandidateBlock == b) {
                 setValue(CandidateBlock.getValue());
                 setDirection(pListOfPossibleEntrancePaths[i].getFromBlockDirection());
-                //if (log.isDebugEnabled()) 
-                    log.info("Block "+getSystemName()+" gets LATE new value from "+ CandidateBlock.getSystemName()+", direction="+Path.decodeDirection(getDirection()));
+                log.info("Block {} gets LATE new value from {}, direction= {}", getSystemName(), CandidateBlock.getSystemName(), Path.decodeDirection(getDirection()));
                 ResetCandidateEntrancePaths();
                 return true;
             }
         }
         return false;
     }
-    
-    
-    /** Handle change in sensor state.
+
+    /**
+     * Handle change in sensor state.
      * <P>
      * Defers real work to goingActive, goingInactive methods
      */
@@ -564,13 +629,13 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
      * Handles Block sensor going INACTIVE: this block is empty
      */
     public void goingInactive() {
-        if (log.isDebugEnabled()) {
-            log.debug("Block " + getSystemName() + " goes UNOCCUPIED");
-        }
+        log.debug("Block {} goes UNOCCUPIED", getSystemName());
         int currPathCnt = paths.size();
         for (int i = 0; i < currPathCnt; i++) {
-           Block b = paths.get(i).getBlock();
-           if (b != null) b.SetAsEntryBlockIfPossible(this);
+            Block b = paths.get(i).getBlock();
+            if (b != null) {
+                b.SetAsEntryBlockIfPossible(this);
+            }
         }
         setValue(null);
         setDirection(Path.NONE);
@@ -588,6 +653,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         if (getState() == OCCUPIED) {
             return;
         }
+        log.debug("Block {} goes OCCUPIED", getSystemName());
         ResetCandidateEntrancePaths();
         // index through the paths, counting
         int count = 0;
@@ -632,59 +698,59 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
                 // normal case, transfer value object 
                 setValue(next.getBlock().getValue());
                 setDirection(next.getFromBlockDirection());
-                if (log.isDebugEnabled()) {
-                    log.debug("Block " + getSystemName() + " gets new value from " + next.getBlock().getSystemName() + ", direction=" + Path.decodeDirection(getDirection()));
-                }
+                log.debug("Block {} gets new value '{}' from {}, direction={}",
+                        getSystemName(),
+                        next.getBlock().getValue(),
+                        next.getBlock().getSystemName(),
+                        Path.decodeDirection(getDirection()));
             } else if (next == null) {
-                log.error("unexpected next==null processing signal in block " + getSystemName());
+                log.error("unexpected next==null processing block " + getSystemName());
             } else if (next.getBlock() == null) {
-                log.error("unexpected next.getBlock()=null processing signal in block " + getSystemName());
+                log.error("unexpected next.getBlock()=null processing block " + getSystemName());
             }
         } else {  // count > 1, check for one with proper direction
             // this time, count ones with proper direction
-            if (log.isDebugEnabled()) {
-                log.debug("Block " + getSystemName() + "- count of active linked blocks = " + count);
-            }
+            log.debug("Block {} has {} active linked blocks, comparing directions", getSystemName(), count);
             next = null;
             count = 0;
             for (int i = 0; i < currPathCnt; i++) {
-                if (isSet[i] && isActive[i] && (pDir[i] == pFromDir[i])) {
-                    count++;
-                    next = pList[i];
-                }
-            }
-            if (next == null) {
-                if (log.isDebugEnabled()) {
-                    log.debug("next is null!");
+                if (isSet[i] && isActive[i]) {  //only consider active reachable blocks
+                    log.debug("comparing {} ({}) to {} ({})",
+                            pList[i].getBlock().getDisplayName(), Path.decodeDirection(pDir[i]),
+                            getSystemName(), Path.decodeDirection(pFromDir[i]));
+                    if ((pDir[i] & pFromDir[i]) > 0) { //use bitwise comparison to support combination directions such as "North, West"
+                        count++;
+                        next = pList[i];
+                    }
                 }
             }
             if (next == null) {
                 for (int i = 0; i < currPathCnt; i++) {
-                   if (isSet[i] && isActive[i]) {
-                       count++;
-                       next = pList[i];
-                   }  
+                    if (isSet[i] && isActive[i]) {
+                        count++;
+                        next = pList[i];
+                    }
                 }
             }
             if (next != null && count == 1) {
-                // found one block with proper direction, assume that
+                // found one block with proper direction, use it
                 setValue(next.getBlock().getValue());
                 setDirection(next.getFromBlockDirection());
-                if (log.isDebugEnabled()) {
-                    log.debug("Block " + getSystemName() + " with direction " + Path.decodeDirection(getDirection()) + " gets new value from " + next.getBlock().getSystemName() + ", direction=" + Path.decodeDirection(getDirection()));
-                }
+                log.debug("Block {} gets new value '{}' from {}, direction {}",
+                        getSystemName(), next.getBlock().getValue(),
+                        next.getBlock().getSystemName(), Path.decodeDirection(getDirection()));
             } else {
                 // no unique path with correct direction - this happens frequently from noise in block detectors!!
-                log.warn("count of " + count + " ACTIVE neightbors with proper direction can't be handled for block " + getSystemName() 
-                                + " but maybe it can be determined when an other block becomes free");
+                log.warn("count of " + count + " ACTIVE neightbors with proper direction can't be handled for block " + getSystemName()
+                        + " but maybe it can be determined when another block becomes free");
                 pListOfPossibleEntrancePaths = new Path[currPathCnt];
                 CntOfPossibleEntrancePaths = 0;
                 for (int i = 0; i < currPathCnt; i++) {
                     if (isSet[i] && isActive[i]) {
                         pListOfPossibleEntrancePaths[CntOfPossibleEntrancePaths] = pList[i];
                         CntOfPossibleEntrancePaths++;
-            }
-        }
+                    }
+                }
             }
         }
         setState(OCCUPIED);
@@ -735,38 +801,39 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         } else {
             // count > 1, check for one with proper direction
             // this time, count ones with proper direction
-            if (log.isDebugEnabled()) {
-                log.debug("Block " + getSystemName() + "- count of active linked blocks = " + count);
-            }
+            log.debug("Block {} - count of active linked blocks = {}", getSystemName(), count);
             next = null;
             count = 0;
             for (int i = 0; i < currPathCnt; i++) {
-                if (isSet[i] && isActive[i] && (pDir[i] == pFromDir[i])) {
-                    count++;
-                    next = pList[i];
+                if (isSet[i] && isActive[i]) {  //only consider active reachable blocks
+                    log.debug("comparing {} ({}) to {} ({})",
+                            pList[i].getBlock().getDisplayName(), Path.decodeDirection(pDir[i]),
+                            getSystemName(), Path.decodeDirection(pFromDir[i]));
+                    if ((pDir[i] & pFromDir[i]) > 0) { //use bitwise comparison to support combination directions such as "North, West"
+                        count++;
+                        next = pList[i];
+                    }
                 }
             }
             if (next == null) {
-                if (log.isDebugEnabled()) {
-                    log.debug("next is null!");
-                }
+                log.debug("next is null!");
             }
             if (next != null && count == 1) {
                 // found one block with proper direction, assume that
             } else {
                 // no unique path with correct direction - this happens frequently from noise in block detectors!!
-                log.warn("count of " + count + " ACTIVE neightbors with proper direction can't be handled for block " + getSystemName());
+                log.warn("count of " + count + " ACTIVE neighbors with proper direction can't be handled for block " + getSystemName());
             }
         }
         // in any case, go OCCUPIED
-        if (log.isDebugEnabled()) {
-            log.debug("Block " + getSystemName() + " with direction " + Path.decodeDirection(getDirection()) + " gets new value from " + (next != null ? next.getBlock().getSystemName() : "(no next block)") + "(informational. No state change)");
+        if (log.isDebugEnabled()) { // avoid potentially expensive non-logging
+            log.debug("Block {} with direction {} gets new value from {} + (informational. No state change)", getSystemName(), Path.decodeDirection(getDirection()), (next != null ? next.getBlock().getSystemName() : "(no next block)"));
         }
         return (next);
     }
 
     /*
-     * This allows the layout block to inform any listerners to the block that the higher level layout block has been set to "useExtraColor" which is an 
+     * This allows the layout block to inform any listeners to the block that the higher level layout block has been set to "useExtraColor" which is an 
      * indication that it has been allocated to a section by the AutoDispatcher.  The value set is not retained in any form by the block, it is purely to
      * trigger a propertyChangeEvent.
      */
@@ -782,7 +849,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
     /**
      * Parse a given string and return the LocoAddress value that is presumed
      * stored within it based on this object's protocol. The Class Block
-     * implementationd defers to its associated Reporter, if it exists.
+     * implementation defers to its associated Reporter, if it exists.
      *
      * @param rep String to be parsed
      * @return LocoAddress address parsed from string, or null if this Block
@@ -804,7 +871,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
             // NOTE: This pattern is based on the one defined in jmri.jmrix.loconet.LnReporter
             Pattern ln_p = Pattern.compile("(\\d+) (enter|exits|seen)\\s*(northbound|southbound)?");  // Match a number followed by the word "enter".  This is the LocoNet pattern.
             Matcher m = ln_p.matcher(rep);
-            if ((m != null) && m.find()) {
+            if (m.find()) {
                 log.debug("Parsed address: " + m.group(1));
                 return (new DccLocoAddress(Integer.parseInt(m.group(1)), LocoAddress.Protocol.DCC));
             } else {
@@ -880,7 +947,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
     }
 
     public void vetoableChange(java.beans.PropertyChangeEvent evt) throws java.beans.PropertyVetoException {
-        if ("CanDelete".equals(evt.getPropertyName())) { //IN18N
+        if ("CanDelete".equals(evt.getPropertyName())) { // No I18N
             if (evt.getOldValue() instanceof Sensor) {
                 if (evt.getOldValue().equals(getSensor())) {
                     throw new java.beans.PropertyVetoException(getDisplayName(), evt);
@@ -891,7 +958,7 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
                     throw new java.beans.PropertyVetoException(getDisplayName(), evt);
                 }
             }
-        } else if ("DoDelete".equals(evt.getPropertyName())) { //IN18N
+        } else if ("DoDelete".equals(evt.getPropertyName())) { // No I18N
             if (evt.getOldValue() instanceof Sensor) {
                 if (evt.getOldValue().equals(getSensor())) {
                     setSensor(null);
@@ -909,5 +976,5 @@ public class Block extends jmri.implementation.AbstractNamedBean implements Phys
         return Bundle.getMessage("BeanNameBlock");
     }
 
-    static Logger log = LoggerFactory.getLogger(Block.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(Block.class.getName());
 }
