@@ -9,6 +9,7 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Set;
+import javax.annotation.Nonnull;
 import jmri.Block;
 import jmri.InstanceManager;
 import jmri.NamedBean;
@@ -43,7 +44,6 @@ import org.slf4j.LoggerFactory;
  * <P>
  *
  * @author	Kevin Dickerson Copyright (C) 2011
- * @version	$Revision$
  */
 public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.VetoableChangeListener {
 
@@ -66,7 +66,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      *
      * @param source - The signalmast we are configuring
      */
-    public DefaultSignalMastLogic(SignalMast source) {
+    public DefaultSignalMastLogic(@Nonnull SignalMast source) {
         this.source = source;
         try {
             this.stopAspect = source.getAppearanceMap().getSpecificAppearance(jmri.SignalAppearanceMap.DANGER);
@@ -87,7 +87,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         return facingBlock;
     }
 
-    public LayoutBlock getProtectingBlock(SignalMast dest) {
+    public LayoutBlock getProtectingBlock(@Nonnull SignalMast dest) {
         if (!destList.containsKey(dest)) {
             return null;
         }
@@ -149,7 +149,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         }
         int oldSize = destList.size();
         destList.put(dest, new DestinationMast(dest));
-        //InstanceManager.signalMastLogicManagerInstance().addDestinationMastToLogic(this, dest);
+        //InstanceManager.getDefault(jmri.SignalMastLogicManager.class).addDestinationMastToLogic(this, dest);
         firePropertyChange("length", oldSize, Integer.valueOf(destList.size()));
     }
 
@@ -187,7 +187,9 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      * Use this to determine if the signalmast logic is stored in the panel file
      * and if all the information is stored.
      *
-     * @param store
+     * @param store what to store. One of
+     *              {@link #STOREALL}, {@link #STOREMASTSONLY} or
+     *              {@link #STORENONE}
      */
     public void setStore(int store, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -264,7 +266,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
     public boolean removeDestination(SignalMast dest) {
         int oldSize = destList.size();
         if (destList.containsKey(dest)) {
-            //InstanceManager.signalMastLogicManagerInstance().removeDestinationMastToLogic(this, dest);
+            //InstanceManager.getDefault(jmri.SignalMastLogicManager.class).removeDestinationMastToLogic(this, dest);
             destList.get(dest).dispose();
             destList.remove(dest);
             firePropertyChange("length", oldSize, Integer.valueOf(destList.size()));
@@ -464,7 +466,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      * Sets the states that each turnout must be in for signal not to be set at
      * a stop aspect
      *
-     * @param turnouts
+     * @param turnouts {@link Turnout}s to use
      */
     public void setTurnouts(Hashtable<NamedBeanHandle<Turnout>, Integer> turnouts, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -488,7 +490,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      * Sets which blocks must be inactive for the signal not to be set at a stop
      * aspect
      *
-     * @param blocks
+     * @param blocks {@link Block}s to use
      */
     public void setBlocks(Hashtable<Block, Integer> blocks, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -501,7 +503,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      * Sets which blocks must be inactive for the signal not to be set at a stop
      * aspect These blocks are not stored in the panel file.
      *
-     * @param blocks
+     * @param blocks {@link Block}s to use
      */
     //public void setLayoutBlocks
     public void setAutoBlocks(LinkedHashMap<Block, Integer> blocks, SignalMast destination) {
@@ -514,7 +516,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
     /**
      * Sets which masts must be in a given state before our mast can be set.
      *
-     * @param masts
+     * @param masts {@link SignalMast}s to use
      */
     public void setMasts(Hashtable<SignalMast, String> masts, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -527,7 +529,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
      * Sets which masts must be in a given state before our mast can be set.
      * These masts are not stored in the panel file.
      *
-     * @param masts
+     * @param masts {@link SignalMast}s to use
      */
     public void setAutoMasts(Hashtable<SignalMast, String> masts, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -539,7 +541,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
     /**
      * Sets which sensors must be in a given state before our mast can be set.
      *
-     * @param sensors
+     * @param sensors {@link Sensor}s to use
      */
     public void setSensors(Hashtable<NamedBeanHandle<Sensor>, Integer> sensors, SignalMast destination) {
         if (!destList.containsKey(destination)) {
@@ -752,7 +754,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                 if (included) {
                     return true;
                 }
-                destList.get(dm).isAutoBlockIncluded(blks.get(i));
+                included = destList.get(dm).isAutoBlockIncluded(blks.get(i));
                 if (included) {
                     return true;
                 }
@@ -863,7 +865,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         Runnable r = new Runnable() {
             public void run() {
                 try {
-                    Thread.sleep((InstanceManager.signalMastLogicManagerInstance().getSignalLogicDelay() / 2));
+                    Thread.sleep((InstanceManager.getDefault(jmri.SignalMastLogicManager.class).getSignalLogicDelay() / 2));
                     inWait = false;
                     setMastAppearance();
                 } catch (InterruptedException ex) {
@@ -1001,12 +1003,14 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                                 if ((strSpeed != null) && (!strSpeed.equals(""))) {
                                     float speed = 0.0f;
                                     try {
-                                        speed = new Float(strSpeed);
+                                        speed = Float.valueOf(strSpeed);
                                     } catch (NumberFormatException nx) {
+                                        // not a number, perhaps a name?
                                         try {
-                                            speed = jmri.implementation.SignalSpeedMap.getMap().getSpeed(strSpeed);
+                                            speed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(strSpeed);
                                         } catch (Exception ex) {
-                                            //Considered Normal if the speed does not appear in the map
+                                            // not a name either
+                                            log.warn("Using speed = 0.0 because could not understand \"{}\"", strSpeed);
                                         }
                                     }
                                     //Integer state = Integer.parseInt(strSpeed);
@@ -1114,7 +1118,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         }
     }
 
-    class DestinationMast {
+    private class DestinationMast {
 
         LayoutBlock destinationBlock = null;
         LayoutBlock protectingBlock = null; //this is the block that the source signal is protecting
@@ -1224,7 +1228,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
          * Use this to determine if the signalmast logic is stored in the panel
          * file and if all the information is stored.
          *
-         * @param store
          */
         void setStore(int store) {
             this.store = store;
@@ -1375,7 +1378,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
          * Sets which blocks must be inactive for the signal not to be set at a
          * stop aspect
          *
-         * @param blocks
          */
         void setBlocks(Hashtable<Block, Integer> blocks) {
             log.debug(destination.getDisplayName() + " Set blocks called");
@@ -1404,7 +1406,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
          * Sets which blocks must be inactive for the signal not to be set at a
          * stop aspect
          *
-         * @param blocks
          */
         //public void setLayoutBlocks
         public void setAutoBlocks(LinkedHashMap<Block, Integer> blocks) {
@@ -1438,7 +1439,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         /**
          * Sets which masts must be in a given state before our mast can be set.
          *
-         * @param masts
          */
         void setMasts(Hashtable<SignalMast, String> masts) {
             if (this.userSetMasts != null) {
@@ -1510,7 +1510,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
          * Sets which sensors must be in a given state before our mast can be
          * set.
          *
-         * @param sensors
          */
         void setSensors(Hashtable<NamedBeanHandle<Sensor>, Integer> sensors) {
             if (this.userSetSensors != null) {
@@ -1835,7 +1834,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                 public void run() {
                     try {
 //                    log.debug("Wait started");
-                        Thread.sleep(InstanceManager.signalMastLogicManagerInstance().getSignalLogicDelay());
+                        Thread.sleep(InstanceManager.getDefault(jmri.SignalMastLogicManager.class).getSignalLogicDelay());
 //                    log.debug("wait is over");
                         inWait = false;
                         checkStateDetails();
@@ -1993,8 +1992,8 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
             /*This check is purely for use with the dispatcher, it will check to see if any of the blocks are set to "useExtraColor" 
              which is a means to determine if the block is in a section that is occupied and it not ours thus we can set the signal to danger.*/
             if (state && getAssociatedSection() != null
-                    && jmri.InstanceManager.getDefault(jmri.jmrit.dispatcher.DispatcherFrame.class) != null
-                    && jmri.InstanceManager.getDefault(jmri.jmrit.display.layoutEditor.LayoutBlockManager.class) != null
+                    && jmri.InstanceManager.getNullableDefault(jmri.jmrit.dispatcher.DispatcherFrame.class) != null
+                    && jmri.InstanceManager.getNullableDefault(jmri.jmrit.display.layoutEditor.LayoutBlockManager.class) != null
                     && getAssociatedSection().getState() != Section.FORWARD) {
 
                 LayoutBlockManager lbm = InstanceManager.getDefault(jmri.jmrit.display.layoutEditor.LayoutBlockManager.class);
@@ -2253,7 +2252,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
             ArrayList<LayoutBlock> lblks = new ArrayList<LayoutBlock>();
             if (protectingBlock == null) {
                 String pBlkNames = "";
-                String lBlksNames = "";
+                StringBuffer lBlksNamesBuf = new StringBuffer();
                 for (LayoutBlock pBlk : protectingBlocks) {
                     pBlkNames = pBlkNames + " " + pBlk.blockName + " " + lbm.getLayoutBlockConnectivityTools().checkValidDest(facingBlock, pBlk, destinationBlock, remoteProtectingBlock, LayoutBlockConnectivityTools.MASTTOMAST) + ", ";
                     if (lbm.getLayoutBlockConnectivityTools().checkValidDest(facingBlock, pBlk, destinationBlock, remoteProtectingBlock, LayoutBlockConnectivityTools.MASTTOMAST)) {
@@ -2261,7 +2260,8 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                             lblks = lbm.getLayoutBlockConnectivityTools().getLayoutBlocks(facingBlock, destinationBlock, pBlk, true, jmri.jmrit.display.layoutEditor.LayoutBlockConnectivityTools.MASTTOMAST);
                             protectingBlock = pBlk;
                             for (LayoutBlock lBlk : lblks) {
-                                lBlksNames = lBlksNames + " " + lBlk.blockName;
+                                lBlksNamesBuf.append(" ");
+                                lBlksNamesBuf.append(lBlk.blockName);
                             }
                             break;
                         } catch (jmri.JmriException ee) {
@@ -2269,6 +2269,8 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                         }
                     }
                 }
+                String lBlksNames = new String(lBlksNamesBuf);
+                
                 if (protectingBlock == null) {
                     throw new jmri.JmriException("Path not valid, protecting block null. Protecting block: " + pBlkNames + " not connected to " + facingBlock.blockName + " layout block names: " + lBlksNames);
                 }
@@ -2353,8 +2355,6 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                     int preBlk = i - 1;
                     if (i == lblks.size() - 1) {
                         nxtBlk = i;
-                    } else if (i == 0) {
-                        preBlk = i;
                     }
                     //We use the best connectivity for the current block;
                     connection = new ConnectivityUtil(lblks.get(i).getMaxConnectedPanel());
@@ -2433,7 +2433,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
             if (!allowAutoSignalMastGeneration) {
                 return;
             }
-            ArrayList<jmri.SignalMastLogic> smlList = InstanceManager.signalMastLogicManagerInstance().getLogicsByDestination(destination);
+            ArrayList<jmri.SignalMastLogic> smlList = InstanceManager.getDefault(jmri.SignalMastLogicManager.class).getLogicsByDestination(destination);
             ArrayList<Block> allBlock = new ArrayList<Block>();
 
             for (NamedBeanSetting nbh : userSetBlocks) {
@@ -2802,22 +2802,7 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
             }
         };
 
-        /* Code currently not used commented out to remove unused error
-         protected PropertyChangeListener propertySignalMastLogicManagerListener = new PropertyChangeListener() {
-         public void propertyChange(PropertyChangeEvent e) {
-         if(log.isDebugEnabled())
-         log.debug(destination.getDisplayName() + " Signal Mast Manager Listener");
-         //   log.debug(destination.getDisplayName() + " destination sensor "+ sen.getDisplayName() + "trigger");
-         if (e.getPropertyName().equals("DestinationAdded")) {
-         SignalMast dest = ((SignalMast) e.getNewValue());
-         if(dest==destination){
-         jmri.SignalMastLogic sml = ((jmri.SignalMastLogic) e.getOldValue());
-         setupAutoSignalMast(sml, false);
-         }
-         }
-         }
-         };*/
-        class NamedBeanSetting {
+        private class NamedBeanSetting {
 
             NamedBeanHandle<?> namedBean;
             int setting = 0;
@@ -2958,7 +2943,8 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
                 }
                 for (SignalMast sm : getDestinationList()) {
                     if (isSignalMastIncluded((SignalMast) nb, sm)) {
-                        //@todo need to deal with this situation this one out.
+                        log.warn("Unhandled condition: signal mast included during DoDelete");
+                        // @todo need to deal with this situation
                     }
                 }
             }
@@ -2998,5 +2984,5 @@ public class DefaultSignalMastLogic implements jmri.SignalMastLogic, java.beans.
         return Bundle.getMessage("BeanNameSignalMastLogic");
     }
 
-    static Logger log = LoggerFactory.getLogger(DefaultSignalMastLogic.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(DefaultSignalMastLogic.class.getName());
 }
