@@ -1,11 +1,6 @@
 package jmri.jmrit.logix;
 
-/**
- * @author Pete Cressman Copyright (C) 2015
- * @version $Revision: 28030 $
- * 
- * Hold configuration data for Warrants, includes Speed Map
- */
+import java.awt.GraphicsEnvironment;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -20,10 +15,14 @@ import org.jdom2.Attribute;
 import org.jdom2.DataConversionException;
 import org.jdom2.Document;
 import org.jdom2.Element;
-//import org.jdom2.JDOMException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+/**
+ * Hold configuration data for Warrants, includes Speed Map
+ * 
+ * @author Pete Cressman Copyright (C) 2015
+ */
 public class WarrantPreferences  {
 
     public static final String layoutParams = "layoutParams";   // NOI18N
@@ -105,7 +104,7 @@ public class WarrantPreferences  {
     }
     
     private void loadSpeedMapFromOldXml() {
-        SignalSpeedMap map = SignalSpeedMap.getMap();
+        SignalSpeedMap map = jmri.InstanceManager.getNullableDefault(SignalSpeedMap.class);
         if (map==null) {
             log.error("Cannot find signalSpeeds.xml file.");
             return;
@@ -186,7 +185,7 @@ public class WarrantPreferences  {
             String name = list.get(i).getName();
             Float speed = Float.valueOf(0f);
             try {
-                speed = new Float(list.get(i).getText());
+                speed = Float.valueOf(list.get(i).getText());
             } catch (NumberFormatException nfe) {
                 log.error(SpeedNamePrefs+" has invalid content for "+name+" = "+list.get(i).getText());
             }
@@ -309,16 +308,17 @@ public class WarrantPreferences  {
      */
     public void apply() {
         setSpeedMap();
-        setNXFrame();
+        setNXdata();
     }
-    private void setNXFrame() {
-        NXFrame frame = NXFrame.getInstance();
-        frame.setScale(_scale);
-        frame.setDepth(_searchDepth);
-        frame.setTimeInterval(_msIncrTime);
-        frame.setRampIncrement(_throttleIncr);
-        frame.updatePanel(_interpretation);
-        frame.closeFrame();
+    private void setNXdata() {
+        NXFrame._scale = _scale;
+        WarrantRoute._depth = _searchDepth;
+        NXFrame._intervalTime = _msIncrTime;
+        NXFrame._throttleIncr = _throttleIncr;
+        if (!GraphicsEnvironment.isHeadless()) {
+            NXFrame frame = NXFrame.getInstance();
+            frame.updatePanel(_interpretation);            
+        }
     }
     private void setSpeedMap() {
         SignalSpeedMap map = new SignalSpeedMap();
@@ -327,7 +327,7 @@ public class WarrantPreferences  {
         map.setRampParams(_throttleIncr, _msIncrTime);
         map.setDefaultThrottleFactor(_throttleScale);
         map.setLayoutScale(_scale);
-        map.setMap(map);        
+        jmri.InstanceManager.setDefault(SignalSpeedMap.class, map);        
     }
 
     float getScale() {
@@ -420,5 +420,5 @@ public class WarrantPreferences  {
     
     public static class WarrantPreferencesXml extends XmlFile{}
 
-    private static Logger log = LoggerFactory.getLogger(WarrantPreferences.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(WarrantPreferences.class.getName());
 }
