@@ -1,7 +1,7 @@
 // TreeModel.java
 package jmri.jmrix.jinput;
 
-import edu.umd.cs.findbugs.annotations.SuppressWarnings;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import javax.swing.SwingUtilities;
@@ -34,8 +34,7 @@ import org.slf4j.LoggerFactory;
  * constructor is still active.
  *
  * @author	Bob Jacobsen Copyright 2008, 2010
- * @version	$Revision$
- */
+  */
 public final class TreeModel extends DefaultTreeModel {
 
     /**
@@ -172,7 +171,7 @@ public final class TreeModel extends DefaultTreeModel {
     // note they might not arrive for a while
     Controller[] ca;
 
-    @SuppressWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
+    @SuppressFBWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
     public Controller[] controllers() {
         return ca;
     }
@@ -213,7 +212,7 @@ public final class TreeModel extends DefaultTreeModel {
             dNode.setValue(value);
 
             // report change to possible listeners
-            pcs.firePropertyChange("Value", dNode, new Float(value));
+            pcs.firePropertyChange("Value", dNode, Float.valueOf(value));
         }
     }
 
@@ -256,5 +255,5 @@ public final class TreeModel extends DefaultTreeModel {
         pcs.removePropertyChangeListener(l);
     }
 
-    static Logger log = LoggerFactory.getLogger(TreeModel.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(TreeModel.class.getName());
 }
